Bug 1062189 - Images in the contacts list are shifted to the right, overlapping letter shortcuts

--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -885,3 +885,11 @@ form[role="combobox"] span[data-field="type"] {
   font-style: italic;
   font-weight: unset;
 }
+
+#groups-list {
+  margin-top: 1rem;
+}
+
+#group-favorites {
+  padding-top: 2rem;
+}
